[package]
name = "wp-mini-epub-cli-interactive"
version = "0.1.0-alpha.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cliclack = "0.3.7"
reqwest = { version = "0.12.26", features = ["cookies", "json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
wp-mini = "0.2.0-alpha.2"
wp-mini-epub = "0.9.0-alpha.1"
