[package]
name = "wp-mini-epub-cli-interactive"
version = "0.1.0-alpha.1"
edition = "2024"
description = "An Interactive CLI tool to download WP Storeis into epubs."
authors = ["WattDownload <contact@wattdownload.com>"]
license = "AGPL-3.0-only"
documentation = "https://docs.rs/wp-mini-epub-cli-interactive"
homepage = "https://wprs.dev/crate-wp-mini-epub-cli-interactive"
repository = "https://github.com/WattDownload/crate-wp-mini-epub-cli-interactive"


[dependencies]
anyhow = "1.0.100"
cliclack = "0.3.7"
reqwest = { version = "0.12.26", features = ["cookies", "json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
wp-mini = "0.2.0-alpha.2"
wp-mini-epub = "0.9.0-alpha.1"
